[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nahw-python"
version = "0.1.0"
description = "Python SDK for the nahw-ai API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nahw"]
